--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.2",
     "@types/node": "^17.0.17",
     "framer-motion": "^6.2.6",
     "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.27.0",
-    "react-redux": "^7.2.6",
-    "redux-persist": "^6.0.0"
+    "react-hook-form": "^7.27.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
