--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
                 "src/components"
             ],
             "@": [
-                "src"
+                "src/"
             ]
         },
         "target": "ESNext",
